@@ -82,6 +82,9 @@
       expressions sequentially and in case of an error or warning shows
       the relevant expression instead of the full \code{stopifnot(..)}
       call.
+
+      \item \code{path.expand()} can now handle UTF-8 paths on
+      Windows.  (\PR{17120})
     }
   }
 }
